# ascii-vj-remix

./: .containerignore  .gitignore  CHANGELOG.md  README.md  app.js  index.html  output.html  output.js  package-lock.json  package.json  playlist.json  style.css  vite.config.mjs
docs/: ACCESSIBILITY.md  AGENTS.md  CONTRIBUTORS.md  I18N.md  PERFORMANCE.md  RENDERING_ENGINE.md  ROADMAP.md  RUST_FFMPEG_PORT.md  SECURITY.md  TAURI_RELEASES.md  TESTING.md
experiments/: check_vectors.js  decode_resize_reference.py  frame_prep_reference.py  load_codec.mjs  test_e2e.js
scripts/: build_ffmpeg_sidecar.sh  cargo_env.mjs  check_decode_resize_parity.mjs  check_ffmpeg_resources.mjs  check_frame_prep_parity.mjs  check_github_release_secrets.mjs  check_macos_notarization.mjs  check_offline_bundle.mjs  check_tauri_bundle.mjs  check_tauri_policy.mjs  check_windows_authenticode.mjs  collect_tauri_release_assets.mjs  copy_static_assets.mjs  create_tauri_update_fragment.mjs  merge_tauri_update_fragments.mjs  notarize_macos_dmg.mjs  podman_build.sh  podman_codec_tests.sh  podman_env.sh  podman_run.sh  podman_venv.sh  run_local_desktop_app.sh  set_macos_notarization_secrets.mjs  set_tauri_updater_secret.mjs  smoke_ui_perf.mjs  (+16 more)
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json  tauri.notarized.conf.json  tauri.windows-signed.conf.json  windows-artifact-sign.cmd
src-tauri/capabilities/: default.json  output.json
src-tauri/examples/: check_codec_vectors.rs  decode_preview.rs  decode_resize_fixture.rs  frame_prep_fixture.rs  native_session_preview.rs  pipeline_preview.rs
src-tauri/icons/: icon.icns
src-tauri/resources/ffmpeg/: README.md
src-tauri/src/: ci_smoke.rs  desktop_bridge.rs  lib.rs  main.rs  media_permissions.rs  native_output.rs  system_audio.rs
src-tauri/src/media_engine/: codec.rs  ffmpeg.rs  frame_prep.rs  mod.rs  pipeline.rs
src-tauri/src/native_output/: gpu.rs
(+11 files in other folders)
