[package]
name = "asciline-remix"
version = "0.1.0"
description = "ASCILINE Remix renderer lab desktop shell"
authors = ["ASCILINE Remix Contributors"]
edition = "2021"

[lib]
name = "asciline_remix_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
flate2 = "1"
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
